--- a/donate-website.html
+++ b/donate-website.html
@@ -6,10 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>donate-websites</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="donate-website.css">
 </head>
 
 <body>
+    <header>
+        <div class="first-align ">
+            <h1 class="text-size">Let's Help Those Who Are More In Need</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ducimus labore qui
+                libero, excepturi
+                voluptatibus harum sint assumenda rerum consequatur!</p>
+            <a href="#" class="donate-button">Donate Now</a>
+        </div>
+    </header>
 
+
+    <section>
+        <div class="second-align">
+            <h2>Donate Today</h2>
+            <p id="gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur libero labore dolore
+                dolores? Amet,
+                nobis.
+            </p>
+            <div id="donate-amount">
+                <span>100tk</span>
+                <span>200tk</span>
+                <span id="selected">500tk</span>
+                <span>1000tk</span>
+                <span>5000tk</span>
+            </div>
+            <form action="#">
+                <input type="text" placeholder="other Amount (Taka)">
+            </form>
+            <a href="#" class="donate-button">Donate Now</a>
+
+        </div>
+
+    </section>
 </body>
 
 </html>
