--- a/donate-website.html
+++ b/donate-website.html
@@ -8,7 +8,7 @@
     <title>donate-websites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Splash&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="donate-website.css">
 </head>
@@ -25,28 +25,110 @@
     </header>
 
 
-    <section>
-        <div class="second-align">
+    <section class="margin">
+        <div class="donate-text align">
             <h2>Donate Today</h2>
             <p id="gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur libero labore dolore
                 dolores? Amet,
                 nobis.
             </p>
-            <div id="donate-amount">
-                <span>100tk</span>
-                <span>200tk</span>
-                <span id="selected">500tk</span>
-                <span>1000tk</span>
-                <span>5000tk</span>
-            </div>
-            <form action="#">
-                <input type="text" placeholder="other Amount (Taka)">
-            </form>
-            <a href="#" class="donate-button">Donate Now</a>
+        </div>
 
+        <div id="donate-amount" class="align">
+            <div>100tk</div>
+            <div>200tk</div>
+            <div id="selected-amount">500tk</div>
+            <div>1000tk</div>
+            <div>5000tk</div>
+        </div>
+        <form action="#" class="first-form">
+            <input type="text" placeholder="other Amount (Taka)" class="other-amount">
+        </form>
+        <div class="center-button  align">
+            <a href="#" class="donate-button">Donate Now</a>
         </div>
 
     </section>
+
+    <section class="margin">
+
+        <div class="donate-text align ">
+            <h2>Our Donate Plan</h2>
+            <p id="gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur libero labore dolore
+                dolores? Amet,
+                nobis.
+            </p>
+        </div>
+        <div class="donate-plan">
+            <div class="food-for-family planes ">
+                <img src="icons/food.png" alt="" class="images">
+                <h3 class="plan-title">Food for a family</h3>
+                <p class="plan-details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?
+                </p>
+            </div>
+            <div class="cloth-for-family  planes">
+                <img src="icons/clothes.svg" alt="" class="images">
+                <h3 class="plan-title">cloths for a family</h3>
+                <p class="plan-details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?
+                </p>
+            </div>
+            <div class="medicine-for-family  planes">
+                <img src="icons/medicine.svg" alt="" class="images">
+                <h3 class="plan-title">Education for a child</h3>
+                <p class="plan-details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?
+
+                </p>
+            </div>
+
+        </div>
+    </section>
+
+
+
+    <section class="bonus-point">
+        <div class="middle">
+            <div class="half-width">
+                <h1>Sir i am sorry. i cant do better..</h1>
+                <p>jhankar sir. i am happy to you teach me. i little learning about html,css.. but i dont practise more.
+                    so
+                    that i forget almost tag & css property.. now its ok.. </p>
+                <a href="#" class="donate-button">Thank you!</a>
+            </div>
+            <div class="half-width">
+                <img src="images/donation5.jpg" alt="" class="bonus-image">
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+    <section class=" margin">
+        <div class="align">
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A minima at velit nesciunt maxime
+                laudantium
+                tempore explicabo iure? Maxime </p>
+        </div>
+        <div id="second-form">
+            <form action="#" class="second-form">
+                <input type="e-mail" placeholder="E-mail" class="email">
+                <a href="#" class="subscribe">subscribe</a>
+            </form>
+
+        </div>
+    </section>
+
+
+
+
+
+    <footer>
+        <h2>Be Humble</h2>
+        <p>i am gonna do it.</p>
+    </footer>
+
 </body>
 
 </html>
