--- a/donate-website.html
+++ b/donate-website.html
@@ -6,27 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>donate-websites</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Splash&display=swap"
         rel="stylesheet">
+
     <link rel="stylesheet" href="donate-website.css">
 </head>
 
 <body>
+
     <header>
-        <div class="first-align ">
-            <h1 class="text-size">Let's Help Those Who Are More In Need</h1>
+        <div class="align cover-text  ">
+            <h1 id="text-size">Let's Help Those Who Are More In Need</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ducimus labore qui
-                libero, excepturi
-                voluptatibus harum sint assumenda rerum consequatur!</p>
+                libero, excepturi voluptatibus harum sint assumenda rerum consequatur!</p>
             <a href="#" class="donate-button">Donate Now</a>
         </div>
     </header>
 
 
+
     <section class="margin">
-        <div class="donate-text align">
+        <div class="align">
             <h2>Donate Today</h2>
             <p id="gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur libero labore dolore
                 dolores? Amet,
@@ -35,70 +38,77 @@
         </div>
 
         <div id="donate-amount" class="align">
-            <div>100tk</div>
-            <div>200tk</div>
-            <div id="selected-amount">500tk</div>
-            <div>1000tk</div>
-            <div>5000tk</div>
+            <div>100Tk</div>
+            <div>200Tk</div>
+            <div id="selected-amount">500Tk</div>
+            <div>1000Tk</div>
+            <div>5000Tk</div>
         </div>
-        <form action="#" class="first-form">
-            <input type="text" placeholder="other Amount (Taka)" class="other-amount">
+
+        <form action="#" class="donate-form">
+            <input type="text" placeholder="Other Amount (Taka)" class="other-amount">
         </form>
-        <div class="center-button  align">
+
+        <div class="amount-button  align">
             <a href="#" class="donate-button">Donate Now</a>
         </div>
 
     </section>
 
+
+
     <section class="margin">
 
-        <div class="donate-text align ">
+        <div class="align ">
             <h2>Our Donate Plan</h2>
             <p id="gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur libero labore dolore
-                dolores? Amet,
-                nobis.
+                dolores? Amet,nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis obcaecati
+                error numquam
+                explicabo quam sequi necessitatibus cumque similique ullam enim, fuga fugit sint aliquam. Provident
+                expedita ipsam dolores ad nemo.
             </p>
         </div>
-        <div class="donate-plan">
-            <div class="food-for-family planes ">
-                <img src="icons/food.png" alt="" class="images">
-                <h3 class="plan-title">Food for a family</h3>
-                <p class="plan-details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?
-                </p>
-            </div>
-            <div class="cloth-for-family  planes">
-                <img src="icons/clothes.svg" alt="" class="images">
-                <h3 class="plan-title">cloths for a family</h3>
-                <p class="plan-details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?
-                </p>
-            </div>
-            <div class="medicine-for-family  planes">
-                <img src="icons/medicine.svg" alt="" class="images">
-                <h3 class="plan-title">Education for a child</h3>
-                <p class="plan-details">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?
 
-                </p>
+        <div class="donate-plans">
+            <div class="food-plans plans ">
+                <img src="icons/food.png" alt="" class="icons">
+                <h3>Food for a family</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?</p>
             </div>
 
+            <div class="cloth-plans  plans">
+                <img src="icons/clothes.svg" alt="" class="icons">
+                <h3>cloths for a family</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?</p>
+            </div>
+
+            <div class="medicine-plans  plans">
+                <img src="icons/medicine.svg" alt="" class="icons">
+                <h3>Medicine for a child</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, molestiae?</p>
+            </div>
         </div>
+
     </section>
 
 
 
-    <section class="bonus-point">
-        <div class="middle">
+
+    <section class="margin">
+        <div class="bonus-section">
+
             <div class="half-width">
                 <h1>Sir i am sorry. i cant do better..</h1>
-                <p>jhankar sir. i am happy to you teach me. i little learning about html,css.. but i dont practise more.
-                    so
-                    that i forget almost tag & css property.. now its ok.. </p>
+                <p>jhankar sir. i am happy to you teach me. its not better, but i try to my best & i will have practise
+                    more. i want to learn more. </p>
                 <a href="#" class="donate-button">Thank you!</a>
             </div>
+
             <div class="half-width">
                 <img src="images/donation5.jpg" alt="" class="bonus-image">
             </div>
-        </div>
 
+        </div>
     </section>
 
 
@@ -108,19 +118,17 @@
         <div class="align">
             <h1>Get My Updates</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A minima at velit nesciunt maxime
-                laudantium
-                tempore explicabo iure? Maxime </p>
+                laudantium tempore explicabo iure? Maxime </p>
         </div>
-        <div id="second-form">
-            <form action="#" class="second-form">
+
+        <div id="email-form">
+            <form action="#" class="subscribe-form">
                 <input type="e-mail" placeholder="E-mail" class="email">
-                <a href="#" class="subscribe">subscribe</a>
+                <a href="#" class="subscribe-button">subscribe</a>
             </form>
-
         </div>
+
     </section>
-
-
 
 
 
